--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,7 +12,7 @@
   * chage mode of home directory, user 755, root 750
 
 phononet-users 0.0.2:
-  * sshkey variable can be an array. authorized_keys file will be created from a template
+  * sshkey variable can be an array. key_authorized file will be created from a template
 
 phononet-users 0.0.1:
   * Initial release
