--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,14 @@
+02-06-2015 release 0.4.0
+  * Add new parameters to users::ssh
+    - parameter "options"
+    - parameter "knownhosts"
+
+26-09-2014 release 0.3.0:
+  * Add stdlib dependency. Add some tests
+  * Rename sshkey to key_authorized. Add hiera support for all defindes. Small bugfixes
+  * Clean up the defines. Add key_* prameter for managing ssh keys. Add rspec tests
+  * Allow to create system user
+
 11-02-2014 release 0.1.0:
   * Allow to create system user
 
